# battery-analysis

./: .gitignore  .pylintrc  CHANGELOG.md  CONFIG_PARSING_FIX_REPORT.md  OPTIMIZATION_REPORT.md  README.md  REMOVED_BBUILD_SUMMARY.md  __version__.md  add_comments.py  add_directory_comments.py  c0301_issues.json  check_json.py  check_qss.py  cleanup_report.md  count_issues.py  debug_exe.py  debug_exe_detailed.py  debug_init.py  demo_modern_ui.py  fix_check_batterytype.py  fix_check_batterytype_simple.py  fix_check_specification.py  fix_checkinput.py  fix_environment_initialization_order.py  fix_final_chinese.py  fix_get_version.py  fix_indentation.py  fix_indentation_simple.py  fix_logging_fstrings.py  fix_python_chinese.py  fix_python_chinese_comprehensive.py  fix_remaining_chinese.py  fix_report_path_summary.md  fix_set_version.py  fix_specific_chinese.py  fix_ui_chinese.py  fix_ultimate_final_chinese.py  fix_ultra_final_chinese.py  integration_guide.py  internationalize_main_window.py  (+59 more)
.claude/: settings.local.json
.github/workflows/: ci-cd.yaml  ci.yml  sync-to-gitee.yaml  sync-to-gitee.yml  test-simple.yml  test-workflow.yaml  wiki-sync.yaml
.trae/documents/: plan_20260108_021148.md  代码检查和refactoring_plan.md更新.md  使用pandas优化数据处理.md  修复版本号每次增加2的问题.md  规范UI设计修改计划.md
config/: BTSDA.cfg  Config_BatteryAnalysis.ini  setting.ini  user_settings.ini
config/resources/icons/: resources.qrc
config/resources/ui/: UI_BatteryAnalysis.ui
docs/: CHANGELOG_GUIDE.md  DECOUPLING_ANALYSIS_REPORT.md  DOCSTRING_GUIDE.md  FIX_XML_AUTO_POPULATE.md  I18N_REFORM_REPORT.md  INTERNATIONALIZATION.md  NUITKA_BUILD.md  OPTIMIZATION_SUMMARY.md  README_PYLINT.md  TESTING_GUIDE.md  USER_GUIDE.md
examples/: abstract_layer_usage.py
locale/en/LC_MESSAGES/: messages.po
locale/test/LC_MESSAGES/: messages.po
locale/zh_CN/LC_MESSAGES/: messages.po
scripts/: Utility_Version.py  build.py  compile_translations.py  compile_translations_python.py  comprehensive_fix.py  comprehensive_indentation_fix.py  comprehensive_syntax_fix.py  extract_translations.py  final_syntax_fix.py  fix_ast_formatting.py  fix_battery_chart_comprehensive.py  fix_battery_chart_final.py  fix_battery_chart_syntax.py  fix_indentation.py  fix_logging_fstrings.py  fix_syntax_errors.py  generate_changelog.py  generate_changelog_simple.py  gettext_compile.py  minimal_compile.py  nuitka-build.py  po_translator.py  proper_compile.py  python_gettext_compile.py  quick_fix.py  quick_fix_imports.py  refactor_by_type.py  rewrite_init.py  run_pylint.py  run_pylint.py.new  run_tests.py  setup_i18n.py  simple_compile_translations.py  test_i18n.py  test_i18n_comprehensive.py  test_i18n_core.py  test_i18n_minimal.py  test_simple_translations.py  ultimate_syntax_fix.py  use_msgfmt.py
src/: Config_BatteryAnalysis.ini
src/battery_analysis/: __init__.py  resources_rc.py
src/battery_analysis/application/usecases/: analyze_data_use_case.py  calculate_battery_use_case.py  generate_report_use_case.py
src/battery_analysis/chart/interfaces/: ichart_manager.py
src/battery_analysis/data/interfaces/: idataprocessor.py
src/battery_analysis/domain/entities/: battery.py  configuration.py  test_profile.py  test_result.py
src/battery_analysis/domain/repositories/: battery_repository.py  configuration_repository.py  test_profile_repository.py  test_result_repository.py
src/battery_analysis/domain/services/: battery_analysis_service.py  test_service.py
src/battery_analysis/i18n/: __init__.py  language_manager.py  preferences_dialog.py
src/battery_analysis/i18n_backup/: __init__.py  en.json  language_manager.py  preferences_dialog.py  zh_CN.json
src/battery_analysis/infrastructure/repositories/: battery_repository_impl.py
src/battery_analysis/infrastructure/services/: battery_analysis_service_impl.py
src/battery_analysis/main/: application_initializer.py  battery_chart_viewer.py  battery_chart_viewer.py.backup_ultimate  config_manager.py  data_processor.py  dialog_manager.py  image_show.py  main_window.py  menu_manager.py  progress_dialog.py  signal_connector.py  theme_manager.py  ui_manager.py  user_settings_manager.py
src/battery_analysis/main/business_logic/: battery_calculator.py  data_processor.py  environment_manager.py  help_manager.py  report_generator.py  settings_manager.py  user_settings_manager.py  validation_manager.py  version_manager.py  visualization_manager.py
src/battery_analysis/main/commands/: command.py
src/battery_analysis/main/ui/: chart.py  (+1 more)
src/battery_analysis/resources/: __init__.py  resources_rc.py
src/battery_analysis/ui/: modern_battery_viewer.py  modern_battery_viewer_refactored.py  modern_chart_widget.py  modern_theme.py  ui_main_window.py
src/battery_analysis/utils/: __init__.py  base_service.py  battery_analysis.py  concurrency_controller.py  config_manager.py  config_parser.py  config_utils.py  csv_utils.py  data_utils.py  environment_utils.py  error_report_generator.py  excel_utils.py  exception_type.py  file_validator.py  file_writer.py  log_manager.py  memory_mapper.py  numeric_utils.py  parallel_utils.py  plot_utils.py  resource_manager.py  resource_monitor.py  resource_pool.py  temperature_utils.py  test_environment_detection.py  test_environment_final.py  test_environment_scenarios.py  version.py  word_utils.py
src/config/: Config_BatteryAnalysis.ini
test_data/: Info_Image.csv
tests/: README.md  test_cache_mechanism.py
tests/battery_analysis/e2e/: test_end_to_end.py
tests/battery_analysis/main/: test_main_window.py
tests/battery_analysis/utils/: test_base_service.py  test_battery_analysis.py  test_config_manager.py  test_config_parser.py  test_config_utils.py  test_csv_utils.py  test_data_utils.py  test_environment_adapter.py  test_environment_utils.py  test_error_report_generator.py  test_excel_utils.py  test_file_validator.py  test_file_writer.py  test_log_manager.py  test_numeric_utils.py  test_parallel_utils.py  test_plot_utils.py  test_resource_manager.py  test_temperature_utils.py  test_version.py  test_word_utils.py
tests/data/: test_config.json  test_file_writer.json
(+145 files in other folders)
