[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-analysis"
version = "2.5.0"
description = "Battery test data variables analysis App, support serveral data type import, and chart viewer"
authors = [
  { name = "Ewin Hardware Group", email = "battery-analysis@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: User Interfaces"
]
keywords = ["battery", "analysis", "GUI", "PyQt6", "data-visualization"]
dependencies = [
    "matplotlib>=3.8.0,<4.0.0",
    "numpy>=1.24.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pandas>=2.3.3",
    "psutil>=5.9.0,<6.0.0",
    "pyqt6>=6.6.0,<7.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "pywin32>=311,<400",
    "xlrd==1.2.0",
    "xlsxwriter~=3.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "pylint>=3.2.0,<4.0.0",
    "astroid>=3.2.0,<4.0.0",
    "pylint-json2html>=0.3.0,<1.0.0"
]
build = [
    "pyinstaller>=6.10.0,<7.0.0"
]

[project.urls]
Homepage = "https://github.com/battery-analysis/battery-analysis"
Repository = "https://github.com/battery-analysis/battery-analysis"
Documentation = "https://github.com/battery-analysis/battery-analysis/blob/main/README.md"

[tool.pylint]
# Pylint配置
ignore = ["CVS", "__pycache__", "temp", "build", ".git", ".vscode"]
max-line-length = 100

[tool.pylint.messages_control]
enable = ["all"]
disable = [
    "missing-function-docstring",  # C0116
    "missing-class-docstring",     # C0115
    "too-few-public-methods",      # R0903
    "too-many-arguments",          # R0913
    "too-many-locals",             # R0914
    "fixme",                       # W0511
    "invalid-name",                # C0103
    "cyclic-import"                # R0401 - 忽略循环导入警告，因为已通过延迟导入解决运行时问题
]

[tool.pylint.format]
indent-string = "    "
indent-after-paren = 4

[tool.pylint.variables]
good-names = ["i", "j", "k", "ex", "Run", "_", "id"]

[tool.pylint.typecheck]
ignored-modules = ["PyQt6", "win32api", "win32con"]

[tool.pylint.imports]
allow-import-from-stdlib-without-as = [
    "os", "sys", "re", "csv", "time", "hashlib",
    "threading", "logging", "datetime", "os.path"
]

[tool.pytest.ini_options]
# 测试目录配置
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*TestCase"]
python_functions = ["test_*"]

# 测试运行配置
addopts = ["-xvs", "--tb=short", "--import-mode=importlib", "--no-header", "--color=yes"]
xfail_strict = true

# 忽略的警告
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning"
]

# 日志配置
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project.scripts]
battery-analysis = "battery_analysis.main.main_window:main"

[tool.setuptools]
packages = ["battery_analysis"]
package-dir = {"" = "src"}
include-package-data = true

# 依赖组已在[project.optional-dependencies]中定义，无需重复定义
